X overflow fix

--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
-body {
-    width: 100%;
+html, body {
+    max-width: 100%;
     overflow-x: hidden;
 }
 
